force-app/main/default/objects/FSM_DataCaptureFormInfra__c/FSM_DataCaptureFormInfra__c.object-meta.xml
<CustomObject>
    <description>Data capture form structure for Infra BU only, SFI-35 and SFS-1950</description>
    <label>Infra Data Capture Form 1</label>
    <nameField>
        <displayFormat>DCFINFRA-{000000}</displayFormat>
        <label>Data Capture Form Infra Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Infra Data Capture Form 1</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>