force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_2ndOperative__c.field-meta.xml
<CustomField>
    <fullName>FSM_2ndOperative__c</fullName>
    <label>2nd Operative</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>