force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AccessRestricted__c.field-meta.xml
<CustomField>
    <fullName>FSM_AccessRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Issues</label>
    <type>Checkbox</type>
</CustomField>