force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ActionsDidYouCarryOut__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActionsDidYouCarryOut__c</fullName>
    <description>SFS-1319</description>
    <label>What actions did you carry out?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>