force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ActualDuration__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActualDuration__c</fullName>
    <formula>IF(DATETIMEVALUE(FSM_ActualRestorationDateAndTime__c )&gt;DATETIMEVALUE(FSM_ActualInterruptionDateAndTime__c),                   
  IF
(
    FLOOR((FSM_ActualRestorationDateAndTime__c  - FSM_ActualInterruptionDateAndTime__c)*24)&gt;9,
    TEXT(FLOOR((FSM_ActualRestorationDateAndTime__c - FSM_ActualInterruptionDateAndTime__c)*24)),
    &quot;0&quot; &amp; TEXT(FLOOR((FSM_ActualRestorationDateAndTime__c - FSM_ActualInterruptionDateAndTime__c)*24))
    )
&amp;&quot;.&quot;&amp;
    IF
    (
    ROUND(MOD((FSM_ActualRestorationDateAndTime__c - FSM_ActualInterruptionDateAndTime__c)*1440,60),0)&gt;9,
    TEXT(ROUND(MOD((FSM_ActualRestorationDateAndTime__c - FSM_ActualInterruptionDateAndTime__c)*1440,60),0)),
    &quot;0&quot; &amp; TEXT(ROUND(MOD((FSM_ActualRestorationDateAndTime__c - FSM_ActualInterruptionDateAndTime__c)*1440,60),0))
    ), 

 

    IF
    (
    FLOOR(( FSM_ActualInterruptionDateAndTime__c- FSM_ActualRestorationDateAndTime__c  )*24)&gt;9,
    TEXT(FLOOR(( FSM_ActualInterruptionDateAndTime__c- FSM_ActualRestorationDateAndTime__c  )*24)),
    &quot;0&quot; &amp; TEXT(FLOOR(( FSM_ActualInterruptionDateAndTime__c- FSM_ActualRestorationDateAndTime__c )*24))
    )
&amp;&quot;.&quot;&amp;
    IF
    (
    ROUND(MOD(( FSM_ActualInterruptionDateAndTime__c- FSM_ActualRestorationDateAndTime__c  )*1440,60),0)&gt;9,
    TEXT(ROUND(MOD(( FSM_ActualInterruptionDateAndTime__c- FSM_ActualRestorationDateAndTime__c  )*1440,60),0)),
    &quot;0&quot; &amp; TEXT(ROUND(MOD(( FSM_ActualInterruptionDateAndTime__c- FSM_ActualRestorationDateAndTime__c  )*1440,60),0))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Duration</label>
    <type>Text</type>
</CustomField>