force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ActualInterruptionDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActualInterruptionDateAndTime__c</fullName>
    <label>Actual Interruption Date and Time</label>
    <type>DateTime</type>
</CustomField>