force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ActualRestorationDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActualRestorationDateAndTime__c</fullName>
    <label>Actual Restoration Date and Time</label>
    <type>DateTime</type>
</CustomField>