force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AddAnyAdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_AddAnyAdditionalComments__c</fullName>
    <description>created as a part of SFS-1314</description>
    <label>Add any additional comments</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>