force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Address__c.field-meta.xml
<CustomField>
    <fullName>FSM_Address__c</fullName>
    <description>SFS-2983</description>
    <formula>FSM_WorkOrder__r.Street + &quot; &quot; +  FSM_WorkOrder__r.City + &quot; &quot; +  FSM_WorkOrder__r.State + &quot; &quot; +  FSM_WorkOrder__r.PostalCode + &quot; &quot; +  FSM_WorkOrder__r.Country</formula>
    <label>ADDRESS</label>
    <type>Text</type>
</CustomField>