force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AlternativeSuppliesRequired__c.field-meta.xml
<CustomField>
    <fullName>FSM_AlternativeSuppliesRequired__c</fullName>
    <inlineHelpText>Can we utilise an alternative supply method to avoid isolating supply for example RRU/Aqua stop</inlineHelpText>
    <label>Alternative supplies required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>