force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AquaPeaUsed__c.field-meta.xml
<CustomField>
    <fullName>FSM_AquaPeaUsed__c</fullName>
    <description>Created as part of sfs-6000</description>
    <label>AquaPea used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unable to deploy</fullName>
            </value>
            <value>
                <fullName>Reduced</fullName>
            </value>
            <value>
                <fullName>No impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>