force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AreaAffected__c.field-meta.xml
<CustomField>
    <fullName>FSM_AreaAffected__c</fullName>
    <label>Address/Area Affected</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>