force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AreNoWaitingConesRequired__c.field-meta.xml
<CustomField>
    <fullName>FSM_AreNoWaitingConesRequired__c</fullName>
    <label>Are no waiting cones required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - same day</fullName>
            </value>
            <value>
                <fullName>Yes - day before</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>