force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_ArePhotosAttached__c.field-meta.xml
<CustomField>
    <fullName>FSM_ArePhotosAttached__c</fullName>
    <description>Created as a part of SFS-1314</description>
    <label>Are photos attached:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>