force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AssessmentCarriedOutBy__c.field-meta.xml
<CustomField>
    <fullName>FSM_AssessmentCarriedOutBy__c</fullName>
    <description>SFS-2983</description>
    <label>Assessment carried out by:</label>
    <length>80</length>
    <type>Text</type>
</CustomField>