force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Asset__c.field-meta.xml
<CustomField>
    <fullName>FSM_Asset__c</fullName>
    <inlineHelpText>The asset is the piece of Equipment you will be working on e.g. Main</inlineHelpText>
    <label>Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D 2</fullName>
                <label>MAIN</label>
            </value>
            <value>
                <fullName>D 3</fullName>
                <label>SERVICE</label>
            </value>
            <value>
                <fullName>D 4</fullName>
                <label>BOUNDARY BOX AND METER</label>
            </value>
            <value>
                <fullName>D 5</fullName>
                <label>LONG COMM PIPE</label>
            </value>
            <value>
                <fullName>D 6</fullName>
                <label>SHORT COMM PIPE</label>
            </value>
            <value>
                <fullName>D 7</fullName>
                <label>SLUICE VALVE</label>
            </value>
            <value>
                <fullName>D 8</fullName>
                <label>HYDRANT</label>
            </value>
            <value>
                <fullName>D 9</fullName>
                <label>WASHOUT</label>
            </value>
            <value>
                <fullName>D 10</fullName>
                <label>STOP TAP</label>
            </value>
            <value>
                <fullName>D 11</fullName>
                <label>BOUNDARY BOX</label>
            </value>
            <value>
                <fullName>D 12</fullName>
                <label>METER</label>
            </value>
            <value>
                <fullName>D 13</fullName>
                <label>PSV</label>
            </value>
            <value>
                <fullName>D 14</fullName>
                <label>PRV</label>
            </value>
            <value>
                <fullName>D 15</fullName>
                <label>AIR VALVE</label>
            </value>
            <value>
                <fullName>D 16</fullName>
                <label>MARKER POST</label>
            </value>
            <value>
                <fullName>D 17</fullName>
                <label>LOGGER</label>
            </value>
            <value>
                <fullName>D 18</fullName>
                <label>RRU</label>
            </value>
            <value>
                <fullName>D 19</fullName>
                <label>TANKER</label>
            </value>
            <value>
                <fullName>D 20</fullName>
                <label>BOWSER</label>
            </value>
            <value>
                <fullName>D 21</fullName>
                <label>FILTER</label>
            </value>
            <value>
                <fullName>D 22</fullName>
                <label>CUSTOMER TAP</label>
            </value>
            <value>
                <fullName>D 23</fullName>
                <label>RESERVOIR</label>
            </value>
            <value>
                <fullName>D 24</fullName>
                <label>OVERLANDER</label>
            </value>
            <value>
                <fullName>D 25</fullName>
                <label>AQUEDUCT</label>
            </value>
            <value>
                <fullName>D 26</fullName>
                <label>REINSTATEMENT</label>
            </value>
            <value>
                <fullName>D 27</fullName>
                <label>SYSTEM</label>
            </value>
            <value>
                <fullName>D 28</fullName>
                <label>HOUSEHOLD PROPERTY</label>
            </value>
            <value>
                <fullName>D 29</fullName>
                <label>NON HOUSEHOLD PROPERTY</label>
            </value>
            <value>
                <fullName>D 30</fullName>
                <label>HOUSEHOLD SUPPLY PIPE</label>
            </value>
            <value>
                <fullName>D 31</fullName>
                <label>NON HOUSEHOLD SUPPLY PIPE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>