force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AssetMaterial__c.field-meta.xml
<CustomField>
    <fullName>FSM_AssetMaterial__c</fullName>
    <inlineHelpText>The material is what the asset is made of e.g. Cast Iron</inlineHelpText>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>DUCTILE IRON</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>LEAD</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>MDPE</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>GALV</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>PVC</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>COPPER</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>AC</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>HPPE</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>PURITON</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>PROTECTALINE</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>POLY</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>STEEL</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>CAST IRON</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>BRASS</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>PEAL</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>SCP</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>LARGE DEVELOPER</label>
            </value>
            <value>
                <fullName>43</fullName>
                <label>SMALL DEVELOPER</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>WEARING COURSE</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>BASE-WEARING COURSE</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>SUB BASE-GRADE H.WAY</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>KERBLINE AND BACKING</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>FOOTWAY - REIN</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>FOOTWAY - REIN + B/F</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>UNMADE - REIN</label>
            </value>
            <value>
                <fullName>63</fullName>
                <label>UNMADE - REIN + B/F</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>BLACK POLYURETHANE</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>NOT APPLICABLE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>