force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AssetSize__c.field-meta.xml
<CustomField>
    <fullName>FSM_AssetSize__c</fullName>
    <inlineHelpText>This is the size of the asset e.g. 4&quot;</inlineHelpText>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>0.5&quot;</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>0.75&quot;</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>1&quot;</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>1.5&quot;</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>2&quot;</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>3&quot;</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>4&quot;</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>5&quot;</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>6&quot;</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>7&quot;</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>8&quot;</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>9&quot;</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>10&quot;</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>12&quot;</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>&gt;12&quot;</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>15MM</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>25MM</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>28MM</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>40MM</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>32MM</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>50MM</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>63MM</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>80MM</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>90MM</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>100MM</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>110MM</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>125MM</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>150MM</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>180MM</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>200MM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>