force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AssetUID__c.field-meta.xml
<CustomField>
    <fullName>FSM_AssetUID__c</fullName>
    <label>Asset UID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>