force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_AuthorisationGrantedBy__c.field-meta.xml
<CustomField>
    <fullName>FSM_AuthorisationGrantedBy__c</fullName>
    <description>Created as part of SFS-1325</description>
    <label>Authorisation Granted By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>