force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_BatteryCheck__c.field-meta.xml
<CustomField>
    <fullName>FSM_BatteryCheck__c</fullName>
    <label>Battery Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>