force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_BlowOffTool__c.field-meta.xml
<CustomField>
    <fullName>FSM_BlowOffTool__c</fullName>
    <label>Do you have a blow off tool and is it in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>