force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_BoardsStandard__c.field-meta.xml
<CustomField>
    <fullName>FSM_BoardsStandard__c</fullName>
    <description>Created as Part SFS-6567</description>
    <label>Are the boards standard or non standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60</fullName>
                <label>Standard</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>Non Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>