force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_BridlewayFootpath__c.field-meta.xml
<CustomField>
    <fullName>FSM_BridlewayFootpath__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-6000</description>
    <label>Bridleway/Footpath</label>
    <type>Checkbox</type>
</CustomField>