force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_BuildingSizeM2__c.field-meta.xml
<CustomField>
    <fullName>FSM_BuildingSizeM2__c</fullName>
    <description>Created as a part of SFS-1314</description>
    <label>Building size m2:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>