force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Bus__c.field-meta.xml
<CustomField>
    <fullName>FSM_Bus__c</fullName>
    <inlineHelpText>Is there any bus impact onsite</inlineHelpText>
    <label>Bus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Bus route</fullName>
            </value>
            <value>
                <fullName>Bus Stop</fullName>
            </value>
            <value>
                <fullName>Bus Lane</fullName>
            </value>
            <value>
                <fullName>Bus stop-Lane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>