force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_Carriageway__c.field-meta.xml
<CustomField>
    <fullName>FSM_Carriageway__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of sfs-6000</description>
    <label>Carriageway</label>
    <type>Checkbox</type>
</CustomField>