force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CarriagewayRestriction__c.field-meta.xml
<CustomField>
    <fullName>FSM_CarriagewayRestriction__c</fullName>
    <inlineHelpText>What type of TMA is required, Please refer to the red book to select the correct type.</inlineHelpText>
    <label>Carriageway Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traffic Control (Give and Take)</fullName>
            </value>
            <value>
                <fullName>Contra-flow</fullName>
            </value>
            <value>
                <fullName>Lane closure (Speed up to 40mph - Speed over 40mph)</fullName>
            </value>
            <value>
                <fullName>No Carriageway incursion</fullName>
            </value>
            <value>
                <fullName>Road closure (20 diversion signs - 60 Diversion signs)</fullName>
            </value>
            <value>
                <fullName>Some carriageway incursion</fullName>
            </value>
            <value>
                <fullName>Traffic control (convoy working)</fullName>
            </value>
            <value>
                <fullName>Traffic control (five-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (four-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (priority working)</fullName>
            </value>
            <value>
                <fullName>Stop-go boards (2 way control - 3 way control - 4 way control)</fullName>
            </value>
            <value>
                <fullName>Traffic control (three-way signals)</fullName>
            </value>
            <value>
                <fullName>Traffic control (two-way signals)</fullName>
            </value>
            <value>
                <fullName>Temporary obstruction (15 minute delay)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>