force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CarriagewaySpecification1__c.field-meta.xml
<CustomField>
    <fullName>FSM_CarriagewaySpecification1__c</fullName>
    <label>Carriageway Specification 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 way control</fullName>
            </value>
            <value>
                <fullName>3 way control</fullName>
            </value>
            <value>
                <fullName>4 way control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>