force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CarriagewaySpecification2__c.field-meta.xml
<CustomField>
    <fullName>FSM_CarriagewaySpecification2__c</fullName>
    <label>Carriageway Specification 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Speed upto 40 mph</fullName>
            </value>
            <value>
                <fullName>Speed over 40mph</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>