force-app/main/default/objects/FSM_DataCaptureFormInfra__c/fields/FSM_CarriagewaySpecification__c.field-meta.xml
<CustomField>
    <fullName>FSM_CarriagewaySpecification__c</fullName>
    <description>created as part of sfs-6000</description>
    <label>Carriageway Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 way control</fullName>
            </value>
            <value>
                <fullName>3 way control</fullName>
            </value>
            <value>
                <fullName>4 way control</fullName>
            </value>
            <value>
                <fullName>speed upto 40 mph</fullName>
            </value>
            <value>
                <fullName>speed over 40 mph</fullName>
            </value>
            <value>
                <fullName>20 diversion signs</fullName>
            </value>
            <value>
                <fullName>60 diversion signs</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>